# nexus-settlement

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  renovate.json
.github/: dependency-check-suppressions.xml
.github/workflows/: ci.yml  release.yml  security-scan.yml
docs/: ARCHITECTURE.md  BACKUP_RECOVERY.md  DEPLOYMENT_STRATEGY.md  RUNBOOK.md  SECURITY.md
infrastructure/k8s/: api-gateway.yaml  fraud-detection.yaml  kustomization.yaml  namespace.yaml  network-policies.yaml  notification-service.yaml  pg-backup-cronjob.yaml  pod-disruption-budgets.yaml  retrain-cronjob.yaml  settlement-service.yaml  vault-rotation-cronjob.yaml
infrastructure/monitoring/: alertmanager.yml  otel-collector.yml  prometheus.yml
infrastructure/terraform/: main.tf  outputs.tf  terraform.tfvars.local  variables.tf
infrastructure/vault/: policy-notification.hcl  policy-settlement.hcl  rotate-secrets.sh  seed-secrets.sh  vault_loader.py
scripts/: export_openapi.py  seed_db.py  setup.sh  strip_comments.py
services/settlement-service/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
services/settlement-service/alembic/: env.py
services/settlement-service/alembic/versions/: 0001_initial_schema.py  0002_add_cancelled_status.py  0003_add_notification_contact_fields.py
services/settlement-service/app/: main.py
services/settlement-service/app/api/v1/: router.py
services/settlement-service/app/api/v1/endpoints/: health.py  settlements.py
services/settlement-service/app/core/: config.py  logging.py  tracing.py
services/settlement-service/app/db/: session.py
services/settlement-service/app/messaging/: dlq_processor.py  kafka_producer.py  settlement_processor.py
services/settlement-service/app/models/: settlement.py
services/settlement-service/app/schemas/: settlement.py
services/settlement-service/app/services/: fraud_client.py  settlement_service.py
services/settlement-service/tests/: conftest.py  test_kafka_contracts.py  test_settlement_processor.py  test_settlements.py
(+111 files in other folders)
